# addon-templates

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  README.md
.github/workflows/: build-manifests.yaml  validate-addon.yml
.utils/: generate-manifest-json.py  make-manifest.py  upload-templates.sh  validate_addon.py
.utils/front-end-support/: acronym_map.json
.utils/readme-generator/: README.md  converters.py  folder_nav.py  generate_md.py  main.py  parsers.py  pyproject.toml
.utils/validation-script/: collection.py  dashboard.py  manifest.py  monitor.py  notification_policy.py  pyproject.toml  requirements.txt  team.py  validate_addon.py  validate_repo.py
telemetry_pipeline/parsers/: README.md
templates/another-example-service/: manifest.yaml
templates/apache-cassandra/: README.md  cassandra-collection.yaml  manifest.yaml
templates/apache-cassandra-3/: README.md
templates/apache-cassandra-copy/: cassandra-team.yaml
templates/aws-ebs/: README.md  aws-collection.yaml  manifest.yaml
templates/aws-ec2/: README.md  manifest.yaml
templates/aws-ec2-copy/: manifest.yaml
templates/aws-lambda/: README.md  manifest.yaml
templates/aws-redis/: README.md  aws-collection.yaml  aws-team.yaml  manifest.yaml
templates/aws-s3/: README.md  manifest.yaml
templates/azure-ad/: README.md  manifest.yaml
templates/azure-firewall/: README.md  manifest.yaml
templates/carbon-black/: manifest.yaml
templates/carbon_black/: README.md  manifest.yaml
templates/chronosphere-licensing/: README.md  (+6 more)
templates/chronosphere-licensing-copy/: chrono-platform-collection.yaml
(+123 files in other folders)
