[tool.poetry]
name = "validation-script"
version = "0"
description = ""
authors = ["Jason Ng jason.ng@chronosphere.io"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.2"
pydantic = "^1.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"